--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -12,7 +12,8 @@ group:
         partials/comments.html
     - docs/assets/css/template
     - .github/workflows/create_index.yml
-    - .github/workflows/mkdocs_build.yml
+    - .github/workflows/main.yml
+    - .github/workflows/update_requirements.yml
     - docs/assets/js
     repos: |
       ObsidianPublisher/obsidian-mkdocs-publisher-template
