--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -2,7 +2,7 @@ group:
   - files: 
     - requirements.txt
     repos: |
-      ObsidianPublisher/obsidian-mkdocs-publisher-template
+      ObsidianPublisher/publisher-template-gh-pages
       sandboxingRepo/obsidian-sandbox
   - files:
     - source: overrides/
@@ -12,13 +12,17 @@ group:
         partials/comments.html
     - docs/assets/css/template
     - .github/workflows/create_index.yml
-    - .github/workflows/main.yml
-    - .github/workflows/update_requirements.yml
     - docs/assets/js
     repos: |
-      ObsidianPublisher/obsidian-mkdocs-publisher-template
+      ObsidianPublisher/publisher-template-gh-pages
+      ObsidianPublisher/publisher-template-netlify
       ObsidianPublisher/obsidian-mkdocs-publisher-docs
       sandboxingRepo/obsidian-sandbox
+  - files:
+    - .github/workflows/main.yml
+    - .github/workflows/update_requirements.yml
+    repos: |
+      ObsidianPublisher/publisher-template-gh-pages
   - files:
     - source: docs/assets/js/wiki_hover.js
       dest: wiki_hover.js
