--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -14,6 +14,7 @@ group:
     - .github/workflows/create_index.yml
     - docs/assets/js
     - find_unused_media.py
+    - docs/tags.md
     repos: |
       ObsidianPublisher/publisher-template-gh-pages
       ObsidianPublisher/publisher-template-netlify
