--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -141,6 +141,7 @@ extra:
   SEO: 'assets/meta/LOGO_SEO.png'
   comments: true
   generate_graph: true
+  attachments: 'assets/img/' #folder where to store attachments
   social:
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/Mara__Li
@@ -152,7 +153,9 @@ extra:
     pagination: false
     pagination_message: false
     pagination_translation: ''
+    no_page_found: 'Aucun article trouvé'
   hooks:
     strip_comments: true
     fix_heading: true
+
 
