--- a/.github/workflows/sync_file.yml
+++ b/.github/workflows/sync_file.yml
@@ -12,7 +12,11 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
       - name: Sync files
-        uses: Redocly/repo-file-sync-action@master
+        uses: BetaHuhn/repo-file-sync-action@latest
         with:
           GH_PAT: ${{ secrets.GH_PAT }}
           SKIP_PR: true
+          COMMIT_PREFIX: "[SYNC]"
+          COMMIT_BODY: "Updated from Mara-Li blog"
+          ORIGINAL_MESSAGE: true
+
