--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,7 +93,10 @@ plugins:
       enable_creation_date: true
   - ezlinks:
         wikilinks: true
-  - mermaid2
+  - mermaid2:
+      arguments:
+        theme: |
+          ^(JSON.parse(__md_get("__palette").index == 1)) ? 'dark' : 'light'
   - awesome-pages
   - embed_file:
       callouts: true
@@ -129,6 +132,7 @@ extra_javascript:
   - assets/js/wiki_hover.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://unpkg.com/mermaid/dist/mermaid.min.js
 extra_css:
     - assets/css/template/img-grids-floats.css
     - assets/css/template/utils.css
