--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -138,7 +138,7 @@ extra_css:
 extra:
   SEO: 'assets/meta/LOGO_SEO.png'
   comments: true
-  generate_graph: false
+  generate_graph: true
   attachments: 'assets/img/' #folder where to store attachments
   social:
     - icon: fontawesome/brands/twitter
