--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -11,6 +11,7 @@ group:
     - find_unused_media.py
     - docs/tags.md
     - .github/workflows/update_req_clean_medias.yml
+    - .github/workflows/deploy.yml
     repos: |
       ObsidianPublisher/follow_template
       ObsidianPublisher/obsidian-mkdocs-publisher-docs
