--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,7 +75,7 @@ jobs:
           git config --global user.name 'github-actions'
           git config --global user.email 'github-actions@users.noreply.github.com'
           git add .
-          git commit -am "[skip ci] Update generated graph"
+          git commit -am "[skip netlify] Update generated graph"
           git push
       - name: send to netlify
         run: |
