--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
     outputs: 
       WORKFLOW_TYPE: ${{ steps.check-env.outputs.WORKFLOW_TYPE }}
       GENERATE_GRAPH: ${{ steps.check-env.outputs.GENERATE_GRAPH }}
-      NETLIFY_SPECIAL: ${{ steps.check-env.outputs.NETLIFY_SPECIAL }}
+      ACTIONS_REQUIREMENTS: ${{ steps.check-env.outputs.ACTIONS_REQUIREMENTS }}
     steps:
       - uses: actions/checkout@v3
       - name: Get .env file
@@ -36,15 +36,13 @@ jobs:
         run: |
           echo "WORKFLOW_TYPE=${{ env.WORKFLOW_TYPE }}" >> $GITHUB_OUTPUT
           echo "GENERATE_GRAPH=${{ env.GENERATE_GRAPH }}" >> $GITHUB_OUTPUT
-          echo "NETLIFY_SPECIAL=${{ env.NETLIFY_REQUIREMENTS }}" >> $GITHUB_OUTPUT
-  netlify:
+          echo "ACTIONS_REQUIREMENTS=${{ env.ACTIONS_REQUIREMENTS }}" >> $GITHUB_OUTPUT
+  generate_graph:
     needs: check-env
     runs-on: ubuntu-latest
-    if: needs.check-env.outputs.NETLIFY_SPECIAL == 'true'
+    if: ${{ needs.check-env.outputs.ACTIONS_REQUIREMENTS == 'true' && needs.check-env.outputs.GENERATE_GRAPH == 'true' }}
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - id: setup_python
         uses: actions/setup-python@v4
         with:
@@ -55,18 +53,19 @@ jobs:
         id: python_cache
         uses: actions/cache@v3
         with:
-          path: venv
+          path: venv-other
           key: pip-${{ steps.setup_python.outputs.python-version }}-${{ hashFiles('requirements-actions.txt') }}
       - name: Update cache
         if: needs.check-env.outputs.GENERATE_GRAPH == 'true' && steps.python_cache.outputs.cache-hit != 'true'
         run: |
-          python -m venv venv
-          source venv/bin/activate
+          if [ -d "venv-other" ]; then rm -rf venv-other; fi
+          python -m venv venv-other
+          source venv-other/bin/activate
           pip install -r requirements-actions.txt
       - name: Generate graph
         if: needs.check-env.outputs.GENERATE_GRAPH == 'true'
         run: |
-          source venv/bin/activate
+          source venv-other/bin/activate
           python generate_graph.py
       - name: Push generated graph
         if: needs.check-env.outputs.GENERATE_GRAPH == 'true'
@@ -77,13 +76,38 @@ jobs:
           git add .
           git commit -am "[skip netlify] Update generated graph"
           git push
-      - name: send to netlify
+  netlify:
+    needs: [check-env, generate_graph]
+    runs-on: ubuntu-latest
+    if: needs.check-env.outputs.WORKFLOW_TYPE == 'netlify' && always()
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Deploy to Netlify
         run: |
           curl -X POST -d {} ${{ secrets.NETLIFY_HOOK }}
+  vercel:
+    needs: [check-env, generate_graph]
+    if: needs.check-env.outputs.WORKFLOW_TYPE == 'vercel' && always()
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
+      - name: Deploy
+        run: |
+          npx vercel --token ${VERCEL_TOKEN} --prod
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+
   gh_pages:
     runs-on: ubuntu-latest
     needs: check-env
-    if: needs.check-env.outputs.WORKFLOW_TYPE != 'netlify'
+    if: needs.check-env.outputs.WORKFLOW_TYPE == 'gh-pages'
     steps:
       - uses: actions/checkout@v3
         with:
@@ -110,19 +134,18 @@ jobs:
         uses: actions/configure-pages@v2
       - name: Mkdocs build
         run: |
-          source venv/bin/activate
-          mkdocs build
+          venv/bin/python3 -m mkdocs build
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./site
   deploy:
-    if: needs.check-env.outputs.WORKFLOW_TYPE != 'netlify'
+    if: needs.check-env.outputs.WORKFLOW_TYPE == 'gh-pages'
+    needs: [gh_pages, check-env]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: gh_pages
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
