--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,6 +134,7 @@ extra:
   comments: true
   generate_graph: false
   attachments: 'assets/img/' #folder where to store attachments
+  no-auto-h1: true
   social:
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/Mara__Li
@@ -142,7 +143,7 @@ extra:
     - icon: fontawesome/brands/mastodon
       link: https://piaille.fr/@Mara__Li
   blog_list:
-    pagination: false
+    pagination: true
     pagination_message: false
     pagination_translation: ''
     no_page_found: 'Aucun article trouvé'
