--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,7 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_div_format
         - name: mermaid
           class: mermaid
-          format: !!python/name:mermaid2.fence_mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
       preserve_tabs: true
 plugins:
   - search
