--- a/Pipfile
+++ b/Pipfile
@@ -21,6 +21,7 @@ cairosvg = "==2.7.0"
 pillow = "==9.5.0"
 mkdocs-glightbox = "==0.3.2"
 mkdocs-minify-plugin = "==0.6.4"
+obsidiantools = "*"
 
 [dev-packages]
 
