--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Deploy to Pages
 
 on:
   workflow_dispatch:
@@ -86,6 +86,8 @@ jobs:
           fetch-depth: 0
       - name: Deploy to Netlify
         run: |
+          rm pipfile.lock
+          rm pipfile
           curl -X POST -d {} ${{ secrets.NETLIFY_HOOK }}
   vercel:
     needs: [check-env, generate_graph]
