--- a/.github/workflows/sync_file.yml
+++ b/.github/workflows/sync_file.yml
@@ -17,7 +17,6 @@ jobs:
         with:
           GH_PAT: ${{ secrets.GH_PAT }}
           SKIP_PR: true
-          COMMIT_PREFIX: "[SYNC]"
-          COMMIT_BODY: "Updated from Mara-Li blog"
           ORIGINAL_MESSAGE: true
+          COMMIT_AS_PR_TITLE: true
 
