[skip ci] Fix inputs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,5 +23,5 @@ jobs:
     secrets:
       NETLIFY_HOOK: ${{ secrets.NETLIFY_HOOK }}
       GH_PAT: ${{ secrets.GH_PAT }}
-      author_email: ${{ secrets.author_email }}
+      author_email: ${{ secrets.AUTHOR_EMAIL }}
       author_name: "lisandra-dev"
