--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -9,6 +9,6 @@ jobs:
     uses: ObsidianPublisher/actions/.github/workflows/maintenance.yml@main
     secrets:
       GH_PAT: ${{ secrets.GITHUB_TOKEN }}
-      author_email: ${{ secrets.author_email }}
+      author_email: ${{ secrets.AUTHOR_EMAIL }}
       author_name: "lisandra-dev"
     
