--- a/.github/workflows/create_index.yml
+++ b/.github/workflows/create_index.yml
@@ -40,6 +40,6 @@ jobs:
       dry_run: ${{ inputs.dry_run}}
     secrets:
       GH_PAT: ${{ secrets.GITHUB_TOKEN }}
-      author_email: ${{ secrets.author_email }}
+      author_email: ${{ secrets.AUTHOR_EMAIL }}
       author_name: "lisandra-dev"
 
