--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,4 @@ jobs:
     uses: ObsidianPublisher/actions/.github/workflows/deploy.yml@main
     secrets:
       NETLIFY_HOOK: ${{ secrets.NETLIFY_HOOK }}
-      GH_PAT: ${{ secrets.GH_PAT }}
-      author_email: ${{ secrets.AUTHOR_EMAIL }}
-      author_name: "lisandra-dev"
+      GH_PAT: ${{ secrets.GITHUB_TOKEN }}
