--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -4,11 +4,16 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
+
+env:
+  AUTHOR_EMAIL: ${{ secrets.AUTHOR_EMAIL }}
+  
 jobs:
   maintenance:
     uses: ObsidianPublisher/actions/.github/workflows/maintenance.yml@main
     secrets:
       GH_PAT: ${{ secrets.GITHUB_TOKEN }}
-      author_email: ${{ secrets.AUTHOR_EMAIL }}
+    with:
+      author_email: ${{ github.env.AUTHOR_EMAIL }}
       author_name: "lisandra-dev"
     
