--- a/.github/workflows/index.yml
+++ b/.github/workflows/index.yml
@@ -40,4 +40,6 @@ jobs:
       dry_run: ${{ inputs.dry_run}}
     secrets:
       GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+      AUTHOR_NAME: "lisandra-dev"
+      AUTHOR_EMAIL: ${{ secrets.AUTHOR_EMAIL }}
 
