--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -9,11 +9,11 @@ env:
   AUTHOR_EMAIL: ${{ secrets.AUTHOR_EMAIL }}
 
 jobs:
-  maintenance:
+  maintenance:      
     uses: ObsidianPublisher/actions/.github/workflows/maintenance.yml@main
     secrets:
       GH_PAT: ${{ secrets.GITHUB_TOKEN }}
-    with:
-      author_email: ${{ github.env.AUTHOR_EMAIL }}
+      author_email: ${{ secrets.AUTHOR_EMAIL }}
       author_name: "lisandra-dev"
+    
     
