update workflows using inputs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ permissions:
 jobs:
   deploy:
     uses: ObsidianPublisher/actions/.github/workflows/deploy.yml@main
+    with:
+      GENERATE_GRAPH: true
     secrets:
       NETLIFY_HOOK: ${{ secrets.NETLIFY_HOOK }}
       GH_PAT: ${{ secrets.GH_PAT }}
