--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   maintenance:
     uses: ObsidianPublisher/actions/.github/workflows/maintenance.yml@main
+    with:
+      CLEAN: true
+      DRY_RUN: false
     secrets:
       GH_PAT: ${{ secrets.GITHUB_TOKEN }}
       AUTHOR_EMAIL: ${{ secrets.AUTHOR_EMAIL }}
