--- a/.github/workflows/optimize_image.yml
+++ b/.github/workflows/optimize_image.yml
@@ -18,5 +18,5 @@ jobs:
               uses: calibreapp/image-actions@main
               with:
                 githubToken: ${{ secrets.GITHUB_TOKEN}}
-            
+                ignorePaths: "overrides/.icons/**"
             
