--- a/.github/workflows/optimize_image.yml
+++ b/.github/workflows/optimize_image.yml
@@ -14,6 +14,7 @@ jobs:
               with:
                 githubToken: ${{ secrets.GITHUB_TOKEN}}
                 ignorePaths: "overrides/.icons/**"
+                compressOnly: true
             - name: "Commit & push"
               uses: actions-js/push@master
               with:
