--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,7 +67,7 @@ markdown_extensions:
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
       options:
         custom_icons:
-          - overrides/.icons
+          - overrides/icons
   - admonition
   - toc:
       permalink: true
