--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,7 +91,8 @@ plugins:
   - awesome-pages
   - blog:
       blog_dir: blog
-      archive: false
+      blog_toc: true
+      post_readtime_words_per_minute: 300
   - git-revision-date-localized:
       type: date
       fallback_to_build_date: true
