--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -128,15 +128,11 @@ extra:
   SEO: '_assets/meta/LOGO_SEO.png'
   comments: true
   generate_graph: false
-  attachments: '_assets/img/' #folder where to store attachments
+  attachments: '_assets/img/'
   no-auto-h1: true
   social:
-    - icon: fontawesome/brands/twitter
-      link: https://twitter.com/Mara__Li
     - icon: fontawesome/brands/github
       link: https://github.com/Lisandra-dev/
-    - icon: fontawesome/brands/mastodon
-      link: https://piaille.fr/@Mara__Li
   blog_list:
     pagination: false
     pagination_message: false
