chore: switch to requirements.txt because pipenv doesn't want to cooperate

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,10 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-          cache: "pipenv"
-      - name: Install pipenv
-        run: pip install pipenv
+          cache: "pip"
       - name: Install dependencies
-        run: pipenv install
+        run: pip install -r requirements.txt
       - name: Build
         run: |
-          pipenv run deploy
+         mkdocs gh-deploy --force
 
