--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,3 +72,11 @@ dependencies = [
     "wcmatch>=10.0",
     "webencodings>=0.5.1",
 ]
+
+[tool.ruff.lint]
+select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
+ignore = ["E501"]
+exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]
+
+[tool.ruff.lint.flake8-quotes]
+inline-quotes = "double"
