--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,11 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
           submodules: 'recursive'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+            enable-cache: true
+            cache-dependency-glob: "uv.lock"
       - name: "Submodule fetching"
         continue-on-error: true
         run: |
@@ -43,8 +48,8 @@ jobs:
           python-version: '3.13'
           cache: "pip"
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: uv sync
       - name: Build
         run: |
-         mkdocs gh-deploy --force
+         uv run mkdocs gh-deploy --force
 
