--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,6 +118,7 @@ extra_javascript:
   - _assets/js/katex.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
   - _assets/js/snippets.js
+  - _assets/js/tippy.js
 
 extra_css:
     - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
