chore: fix wrong version

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
       - 'overrides/**'
       - 'docs/**'
       - 'mkdocs.yml'
-      - 'requirements.txt'
+      - 'uv.lock'
   repository_dispatch:
     types: [build]
 
