--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,7 +115,7 @@ hooks:
   - overrides/hooks/on_env.py
   - overrides/hooks/on_post_page.py
 extra_javascript:
-  - _assets/js/katex.js
+  - _assets/js/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
   - _assets/js/snippets.js
   - _assets/js/tippy.js
