--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,9 +103,9 @@ plugins:
       wikilinks: true
   - embed_file:
       callouts: true
-      custom-attributes: '_assets/css/custom_attributes.css'
+      custom-attributes: '_static/css/custom_attributes.css'
   - custom-attributes:
-      file: '_assets/css/custom_attributes.css'
+      file: '_static/css/custom_attributes.css'
   - tags:
       tags_file: tags.md
   - callouts
@@ -118,11 +118,10 @@ extra_javascript:
   - _static/js/mathjax.js
   - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
   - _static/js/snippets.js
-  - _static/js/patch.js
+  - _static/js/index.js
 
 extra_css:
     - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
-    - https://cdn.jsdelivr.net/gh/ObsidianPublisher/assets@main/dist/styles.css
     - _static/css/admonition.css
     - _static/css/custom_attributes.css
     - _static/css/customization.css
