remove useless dep

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,72 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "babel",
-    "beautifulsoup4",
-    "bracex",
-    "cairocffi",
-    "cairosvg",
-    "certifi",
-    "cffi",
-    "charset-normalizer",
-    "click",
-    "colorama",
-    "csscompressor",
-    "cssselect2",
-    "defusedxml",
-    "ghp-import",
-    "gitdb",
-    "gitpython",
-    "htmlmin2",
-    "idna",
-    "jinja2",
-    "jsmin",
-    "markdown",
-    "markupsafe",
-    "mdx-breakless-lists",
-    "mdx-wikilink-plus",
-    "mergedeep",
     "mkdocs",
-    "mkdocs-awesome-pages-plugin",
-    "mkdocs-callouts",
-    "mkdocs-custom-fences",
-    "mkdocs-custom-tags-attributes",
-    "mkdocs-embed-file-plugin",
-    "mkdocs-encryptcontent-plugin",
-    "mkdocs-get-deps",
-    "mkdocs-git-revision-date-localized-plugin",
-    "mkdocs-glightbox",
     "mkdocs-material",
-    "mkdocs-material-extensions",
+    "mkdocs-awesome-pages-plugin",
+    "mdx_breakless_lists",
+    "mkdocs-embed-file-plugin",
+    "mkdocs_custom_fences",
+    "mkdocs-git-revision-date-localized-plugin",
+    "mkdocs-encryptcontent-plugin",
+    "mkdocs-callouts",
+    "mkdocs-custom-tags-attributes",
     "mkdocs-meta-descriptions-plugin",
-    "mkdocs-minify-plugin",
-    "mkdocs-obsidian-links",
-    "natsort",
-    "packaging",
-    "paginate",
-    "pathspec",
-    "pillow",
-    "platformdirs",
-    "pycparser",
-    "pycryptodome",
-    "pygments",
-    "pymdown-extensions",
-    "python-dateutil",
-    "python-frontmatter",
-    "pytz",
-    "pyyaml",
-    "pyyaml-env-tag",
-    "regex",
-    "requests",
-    "setuptools",
-    "six",
-    "smmap",
-    "soupsieve",
-    "tinycss2",
-    "urllib3",
-    "watchdog",
-    "wcmatch",
-    "webencodings",
+    "mkdocs-glightbox",
+    "mkdocs-obsidian-links"
 ]
 
 [tool.ruff.lint]
