--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,9 @@ jobs:
       - name: Setup Python
         run: uv python install
       - name: Install dependencies
-        run: uv pip install -r requirements.txt
+        run: |
+          uv venv
+          uv sync
       - name: Build
         run: |
          uv run mkdocs gh-deploy --force
