--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,8 @@ exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.
 
 [tool.ruff.lint.flake8-quotes]
 inline-quotes = "double"
+
+[dependency-groups]
+dev = [
+    "pur>=7.3.3",
+]
