--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Install dependencies
         run: |
           uv venv
-          uv sync
+          uv sync --no-dev
       - name: Build
         run: |
          uv run mkdocs gh-deploy --force
