--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -14,3 +14,4 @@ jobs:
       - uses: BetaHuhn/repo-file-sync-action@latest
         with:
           GH_PAT: ${{ secrets.GH_PAT }}
+          SKIP_PR: true
