--- a/requirements.txt
+++ b/requirements.txt
@@ -162,3 +162,5 @@ watchdog==6.0.0
     # via mkdocs
 wcmatch==10.0
     # via mkdocs-awesome-pages-plugin
+ruamel.yaml==0.18.6
+    # via ruamel-yaml
