update config & env

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "beautifulsoup4",
     "babel",
     "ruamel-yaml>=0.18.6",
+    "pydantic"
 ]
 
 [tool.ruff.lint]
@@ -34,7 +35,6 @@ inline-quotes = "double"
 [dependency-groups]
 dev = [
     "pur>=7.3.3",
-    "pyyaml>=6.0.2",
     "ruamel-yaml>=0.18.6",
     "ruff>=0.8.4",
 ]
