--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,10 +18,30 @@ permissions:
   contents: write
   pages: write
   id-token: write
-
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 jobs:
+  fetch:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT }}
+          fetch-depth: 0
+          submodules: 'recursive'
+      - name: "Submodule fetching"
+        continue-on-error: true
+        run: |
+          git submodule update --init --recursive --checkout -f --remote -- "docs"
+          git config --global user.name "GitHub Action"
+          git config --global user.email "noreply@github.com"
+          git commit -am "chore (update): fetch submodule"
+          git push
   deploy:
     runs-on: ubuntu-latest
+    needs: fetch
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,14 +54,6 @@ jobs:
         with:
             enable-cache: true
             cache-dependency-glob: "requirements**.txt"
-      - name: "Submodule fetching"
-        continue-on-error: true
-        run: |
-          git submodule update --init --recursive --checkout -f --remote -- "docs"
-          git config --global user.name "GitHub Action"
-          git config --global user.email "noreply@github.com"
-          git commit -am "chore (update): fetch submodule"
-          git push
       - name: Setup Python
         run: uv python install
       - name: Install dependencies
