--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,6 +49,9 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
           submodules: 'recursive'
+      - name: Fetch submodule
+        run: |
+          git submodule update --init --recursive --checkout -f --remote -- "docs"
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
