--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
-site_name: Seed
-site_description: A little owl
+site_name: Mara Labs
+site_description: Collection de notes de jeux de rôle (mes fiches, principalement), des réflexions sur Obsidian ou d'autres trucs.
 site_url: https://www.blog.mara-li.fr/
 
 theme:
@@ -125,7 +125,7 @@ extra_css:
     - _static/css/custom_attributes.css
     - _static/css/customization.css
     - _static/css/styles.css
-    - _static/css/
+    - _static/css/palette.css
 extra:
   SEO: '_assets/meta/LOGO_SEO.png'
   comments: true
