--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -1,7 +1,10 @@
 name: Update requirement
 on: 
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
+permissions:
+  contents: write
 jobs:
   update-requirements:
     runs-on: ubuntu-latest
@@ -36,5 +39,5 @@ jobs:
           git add requirements.txt
           git commit -m "chore (update): requirements.txt"
           git push
-
-          
+      - name: deploy
+        run: uv run mkdocs gh-deploy --force
