--- a/.github/workflows/update-requirements.yml
+++ b/.github/workflows/update-requirements.yml
@@ -11,6 +11,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PAT}}
+          fetch-depth: 0
+          submodules: 'recursive'
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
@@ -38,6 +42,14 @@ jobs:
           git config --global user.email "noreply@github.com"
           git add requirements.txt
           git commit -m "chore (update): requirements.txt"
+          git push
+      - name: Fetch submodule
+        continue-on-error: true
+        run: |
+          git submodule update --init --recursive --checkout -f --remote -- "docs"
+          git config --global user.name "GitHub Action"
+          git config --global user.email "noreply@github.com"
+          git commit -am "chore (update): fetch submodule"
           git push
       - name: deploy
         run: uv run mkdocs gh-deploy --force
