--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,22 @@ on:
       - 'uv.lock'
   repository_dispatch:
     types: [build]
+  workflow_call:
+    inputs:
+      BRANCH:
+        type: string
+        description: 'Branch to push changes to'
+        required: false
+        default: 'main'
+    secrets:
+      GH_PAT:
+        required: true
+      author_email:
+        required: false
+        description: "The author email"
+      author_name:
+        required: false
+        description: "The author name"
 
 permissions:
   contents: write
@@ -31,14 +47,14 @@ jobs:
           token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
           submodules: 'recursive'
-      - name: "Submodule fetching"
+      - name: "Submodule commit"
         continue-on-error: true
-        run: |
-          git submodule update --init --recursive --checkout -f --remote -- "docs"
-          git config --global user.name "GitHub Action"
-          git config --global user.email "noreply@github.com"
-          git commit -am "chore (update): fetch submodule"
-          git push
+        uses: actions-js/push@master
+        with:
+          github_token: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN}}
+          author_email: ${{ secrets.AUTHOR_EMAIL || 'github-actions[bot]@users.noreply.github.com' }}
+          author_name: ${{ secrets.AUTHOR_NAME || 'github-actions[bot]' }}
+          branch: ${{ inputs.BRANCH || github.ref }}
   deploy:
     runs-on: ubuntu-latest
     needs: fetch
