deploy after maintenance

--- a/.github/workflows/maintenance.yml
+++ b/.github/workflows/maintenance.yml
@@ -15,4 +15,8 @@ jobs:
       GH_PAT: ${{ secrets.GH_PAT }}
       AUTHOR_EMAIL: ${{ 'github-actions[bot]@users.noreply.github.com' }}
       AUTHOR_NAME: ${{ 'github-actions[bot]' }}
-
+  deploy:
+    uses: Mara-Li/wiki/.github/workflows/deploy.yml@main
+    secrets:
+      GH_PAT: ${{ secrets.GH_PAT }}
+      
