--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,17 +16,30 @@ dependencies = [
     "mkdocs-callouts",
     "mkdocs-custom-tags-attributes",
     "mkdocs-meta-descriptions-plugin",
-    "mkdocs-glightbox",
     "mkdocs-obsidian-links",
     "beautifulsoup4",
     "babel",
     "pydantic",
+    "marali-mkdocs-glightbox",
 ]
 
 [tool.ruff.lint]
 select = ["PTH", "ANN", "N", "Q", "PL", "E", "F", "I"]
 ignore = ["E501"]
-exclude = ["tests", "docs", "build", "dist", "venv", "venv3", "venv3.6", "venv3.7", "venv3.8", "venv3.9", "venv3.10", "__pycache__"]
+exclude = [
+    "tests",
+    "docs",
+    "build",
+    "dist",
+    "venv",
+    "venv3",
+    "venv3.6",
+    "venv3.7",
+    "venv3.8",
+    "venv3.9",
+    "venv3.10",
+    "__pycache__",
+]
 
 [tool.ruff.lint.flake8-quotes]
 inline-quotes = "double"
