--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mara-li"
 version = "0.0.1"
 description = "Add your description here"
 readme = "README.md"
-requires-python = "<=3.13"
+requires-python = ">=3.13, <3.14"
 dependencies = [
     "mkdocs",
     "mkdocs-material",
