--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,19 +5,19 @@ on:
   push:
     branches:
       - main
-    paths: 
-      - 'README.md'
-      - 'overrides/**'
-      - 'docs/**'
-      - 'mkdocs.yml'
-      - 'uv.lock'
+    paths:
+      - "README.md"
+      - "overrides/**"
+      - "docs/**"
+      - "mkdocs.yml"
+      - "uv.lock"
   repository_dispatch:
     types: [build]
   workflow_call:
     secrets:
       GH_PAT:
         required: true
-        description: 'GitHub Personal Access Token'
+        description: "GitHub Personal Access Token"
 
 permissions:
   contents: write
@@ -35,7 +35,7 @@ jobs:
         with:
           token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
-          submodules: 'recursive'
+          submodules: "recursive"
       - name: "Submodule commit"
         continue-on-error: true
         uses: actions-js/push@master
@@ -53,15 +53,18 @@ jobs:
         with:
           token: ${{ secrets.GH_PAT }}
           fetch-depth: 0
-          submodules: 'recursive'
+          submodules: "recursive"
       - name: Fetch submodule
         run: |
           git submodule update --init --recursive --checkout -f --remote -- "docs"
+      - name: Install dependencies
+        run: |
+          apt-get install pngquant
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
-            enable-cache: true
-            cache-dependency-glob: "requirements**.txt"
+          enable-cache: true
+          cache-dependency-glob: "requirements**.txt"
       - name: Setup Python
         run: uv python install
       - name: Install dependencies
@@ -70,5 +73,4 @@ jobs:
           uv sync --no-dev
       - name: Build
         run: |
-         uv run mkdocs gh-deploy --force
-
+          uv run mkdocs gh-deploy --force
