--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,7 +59,7 @@ jobs:
           git submodule update --init --recursive --checkout -f --remote -- "docs"
       - name: Install dependencies
         run: |
-          apt-get install pngquant
+          sudo apt-get install pngquant
       - name: Install uv
         uses: astral-sh/setup-uv@v4
         with:
